--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,10 @@
   <meta name="apple-mobile-web-app-title" content="yunusco_group">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
+
+
+
+    <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>yunusco_group</title>
@@ -34,5 +37,7 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </body>
 </html>
